# Near-Nft-Contract

./: Cargo.toml  README.md  _rust_setup.sh  package.json
nft-contract/: Cargo.toml
nft-contract/src/: event.rs  lib.rs
tests/: simulation_tests.rs  test.js
